--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.nutrition.view.NutritionActivity"></activity>
+        <activity android:name=".view.finish.FinishActivity"></activity>
+        <activity android:name=".view.nutrition.view.NutritionActivity" />
         <activity android:name=".view.foodPreparationMode.view.FoodPreparationModeActivity" />
         <activity android:name=".view.food.activity.FoodActivity" />
         <activity android:name=".view.mean.activity.MeanActivity" />
